Atualizado nome Carol

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nome Centralizado</title>
+<style>
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  .nome {
+    font-size: 3rem; /* tamanho da fonte */
+    text-align: center; /* centralizar o texto */
+  }
+</style>
+</head>
+<body>
+  <div class="nome">Carol</div>
+</body>
+</html>
